--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cubejs-client/core": "^0.19.14",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
+    "vue-loaders": "^3.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
