--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@cubejs-client/core": "^0.19.14",
+    "@cubejs-client/vue": "^0.19.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
